--- a/style.qss
+++ b/style.qss
@@ -78,11 +78,21 @@ QPushButton#CloseButton:hover{
 }
 
 QWidget#TitleBar{
-    background-color: #1f1f1f;
+    background-color: #c52f2f;
+    height: 18px;
     margin-top: 0px;
     padding-top: 0px;
 }
 
 QLabel#TitleLabel{
     color: #e4e4e4;
+    font-size: 14px;
+    font-style: bold;
+}
+
+QLineEdit{
+    height: 16px;
+    border-radius: 7px;
+    background-color: #a82828;
+    color: #ae6b60;
 }
