--- a/style.qss
+++ b/style.qss
@@ -33,6 +33,7 @@ QPushButton#MinimizeButton{
     width: 30px;
     height: 30px;
     border: 0px;
+    background-image: url(files/min.png);
 }
 QPushButton#MinimizeButton:hover{
     background-color: #dc6f6f;
@@ -45,6 +46,7 @@ QPushButton#MaximizeButton{
     width: 30px;
     height: 30px;
     border: 0px;
+    background-image: url(files/max.png);
 }
 QPushButton#MaximizeButton:hover{
     background-color: #dc6f6f;
@@ -57,7 +59,7 @@ QPushButton#CloseButton{
     width: 30px;
     height: 30px;
     border: 0px;
-    border: 0px;
+    background-image: url(files/close.png);
 }
 QPushButton#CloseButton:hover{
     background-color: #dc6f6f;
@@ -67,7 +69,8 @@ QPushButton#CloseButton:hover{
 
 QWidget#TitleBar{
     background-color: #c52f2f;
-    padding-left: 5px;
+    height: 32px;
+    border: 0px;
 }
 
 QLineEdit{
